// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/type/date.proto";
import "wfa/measurement/internal/kingdom/recurring_exchange_details.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Represents a Panel Matching exchange that happens between a `DataProvider`
// and a `ModelProvider` on some schedule. This is instantiated once per date in
// the schedule via `Exchange` resources.
message RecurringExchange {
  fixed64 external_recurring_exchange_id = 1;
  fixed64 external_model_provider_id = 2;
  fixed64 external_data_provider_id = 3;

  RecurringExchangeDetails details = 4;

  enum State {
    STATE_UNSPECIFIED = 0;

    // New Exchanges should be started according to the schedule.
    ACTIVE = 1;

    // New Exchanges will not be created.
    RETIRED = 2;
  }
  State state = 5;

  google.type.Date next_exchange_date = 6;
}
